# rs-cli-template

./: Cargo.toml  Makefile  README.md  justfile
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs
core/: Cargo.toml
core/src/: error.rs
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  prelude.rs  utils.rs
src/utils/: config.rs  logger.rs  mod.rs
test/: test.bats
tmpl-bin/: Cargo.toml
tmpl-core/: Cargo.toml
tmpl-core/src/: app.rs  config.rs  lib.rs  utils.rs
utils/: Cargo.toml
utils/src/: config.rs  logger.rs
