[package]
name = "rs-cli-template"
description = "A subjective rust template for building CLIs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["cargo"] }
config = "0.13.2"
serde = "1.0.147"
serde_derive = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
