[package]
name = "rs-cli-template"
version = "0.1.0"
edition = "2021"
authors = []


[[bin]]
name = "changeme"
path = "src/bin/main.rs"
doc = false

[lib]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
config = "0.13.3"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }
which = "4.4.0"
