[package]
name = "tmpl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
clap = { version = "4.0.30", features = ["cargo"] }
config = "0.13.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_derive = "1.0.151"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }
