[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.17", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }
